--- a/site/config.toml
+++ b/site/config.toml
@@ -1,4 +1,4 @@
-title = "Best Whistleblower Lawyers in California | Wilshire Law Firm"
+title = "Best Wrongful Termination Lawyers in California | Wilshire Law Firm"
 baseURL = "/"
 languageCode = "en-us"
 theme = "airspace-hugo"
