--- a/package.json
+++ b/package.json
@@ -67,5 +67,8 @@
   "dependencies": {
     "serialize-javascript": "^4.0.0",
     "yuicompressor": "^2.4.8"
+  },
+  "engines": {
+    "node": ">=0.10.3"
   }
 }
