--- a/site/config.toml
+++ b/site/config.toml
@@ -1,4 +1,4 @@
-title = "Best Age Discrimination Lawyers in California | Wilshire Law Firm"
+title = "Best Workplace Retaliation Lawyers in California | Wilshire Law Firm"
 baseURL = "/"
 languageCode = "en-us"
 theme = "airspace-hugo"
