racial discrimination title change from age to racial

--- a/site/config.toml
+++ b/site/config.toml
@@ -1,4 +1,4 @@
-title = "Best Age Discrimination Lawyers in California | Wilshire Law Firm"
+title = "Best Racial Discrimination Lawyers in California | Wilshire Law Firm"
 baseURL = "/"
 languageCode = "en-us"
 theme = "airspace-hugo"
