--- a/site/config.toml
+++ b/site/config.toml
@@ -5,6 +5,13 @@ theme = "airspace-hugo"
 
 # The site's parameters
 [params]
+  # This number must start with a 1 and contain digits only
+  phoneNumDigitsOnly = "18559174742"
+
+  # Hidden phone number included in footer as provided by PPC
+  # This number will not necessarily match phoneNumDigitsOnly, nor will its formatting
+  phoneNumHidden = "(888) 979-1278"
+
   home = "Home"
 
   [menu]
