updated copy and title/desc tags

--- a/site/config.toml
+++ b/site/config.toml
@@ -1,4 +1,4 @@
-title = "Best Wrongful Termination Lawyers in California | www.wrongfulterminationsocal.com"
+title = "Wrongful Termination & Employment Law :: wrongfulterminationsocal.com"
 baseURL = "/"
 languageCode = "en-us"
 theme = "airspace-hugo"
